--- a/pcmasterrace.html
+++ b/pcmasterrace.html
@@ -28,21 +28,21 @@
 
         <tr>
             <td>Motherboard</td>
-            <td>MSI MPG Z690 CARBON WIFI</td>
-            <td><a href="https://www.arukereso.hu/alaplap-c3128/msi/mpg-z690-carbon-wifi-p731412990/"><img
-                        src="https://cdn.alza.hu/ImgW.ashx?fd=FotoAddOrig&cd=AAz690cw-01&i=1.jpg" width="200px"
+            <td>MSI PRO Z690-A WIFI</td>
+            <td><a href="https://www.arukereso.hu/alaplap-c3128/msi/pro-z690-a-wifi-p731412993/"><img
+                        src="https://p1.akcdn.net/full/891121470.msi-pro-z690-a-wifi.jpg" width="200px"
                         alt="alaplap"></a></td>
-            <td>170000 Ft</td>
+            <td>90000 Ft</td>
         </tr>
 
         <tr>
             <td>Central Processing Unit</td>
-            <td>Intel core i9 12900K</td>
+            <td>Intel core i7 12700K</td>
             <td><a
-                    href="https://www.arukereso.hu/processzor-c3139/intel/core-i9-12900k-16-core-2-40ghz-lga1700-box-p728323101/"><img
-                        src="https://static.techspot.com/articles-info/2443/images/2022-04-05-image-2.jpg" width="200px"
+                    href="https://www.arukereso.hu/processzor-c3139/intel/core-i7-12700k-12-core-2-70ghz-lga1700-box-p728323569/"><img
+                        src="https://p1.akcdn.net/full/884604822.intel-core-i7-12700k-12-core-2-70ghz-lga1700-box.jpg" width="200px"
                         alt="cpu"></a></td>
-            <td>232000 Ft</td>
+            <td>165000 Ft</td>
         </tr>
 
         <tr>
@@ -52,16 +52,16 @@
                     href="https://www.arukereso.hu/szamitogep-huto-c3094/be-quiet/dark-rock-pro-4-bk022-p406560561/?gclid=Cj0KCQjw-daUBhCIARIsALbkjSYvotmWT0P7pv7DPQEMMSNGXIwuRSM046FLbJ0Pl-9fphGsfLqNkoEaAt0BEALw_wcB">
                     <img src="https://www.bequiet.com/volumes/pim/cooler/darkrock/darkrockpro4/3d/004.jpg" width="200px"
                         alt="cpuFan"></a></td>
-            <td>30000 Ft</td>
+            <td>33000 Ft</td>
         </tr>
         <tr>
             <td>Graphics Processing Unit</td>
             <td>ZOTAC GeForce Trinity RTX 3080 12GB</td>
             <td><a
-                    href="https://www.arukereso.hu/videokartya-c3142/zotac/geforce-trinity-rtx-3080-12gb-oc-gddr6x-384bit-lhr-zt-a30820j-10plhr-p771227964/"><img
-                        src="https://p1.akcdn.net/gallery/771227964/full/1229634.zotac-geforce-trinity-rtx-3080-12gb-oc-gddr6x-384bit-lhr-zt-a30820j-10plhr.jpg"
+                    href="https://hardverapro.hu/apro/rog-strix-rtx3080ti-o12g-gaming_2/hsz_1-50.html"><img
+                        src="https://cdn.prohardver.hu/dl/uad/2022-06/5613892/20220527_160616.jpg"
                         width="200px" alt="gpu"></a></td>
-            <td>400000 Ft</td>
+            <td>450000 Ft</td>
         </tr>
         <tr>
             <td>Random Access Memory</td>
@@ -78,7 +78,7 @@
             <td><a href="https://belso-ssd-meghajto.arukereso.hu/samsung/980-pro-1tb-m-2-mz-v8p1t0bw-p591366474/"><img
                         src="https://p1.akcdn.net/full/738599052.samsung-980-pro-1tb-m-2-mz-v8p1t0bw.jpg" width="200px"
                         alt="ssd"></a></td>
-            <td>56000 Ft</td>
+            <td>53000 Ft</td>
         </tr>
         <tr>
             <td>Power Supply</td>
@@ -86,16 +86,25 @@
             <td><a href="https://www.arukereso.hu/tapegyseg-c3158/be-quiet/dark-power-12-1000w-bn316-p647948829/"><img
                         src="https://p1.akcdn.net/full/813077487.be-quiet-dark-power-12-1000w-bn316.jpg" width="200px"
                         alt=""></a></td>
-            <td>110000 Ft</td>
+            <td>100000 Ft</td>
+        </tr>
+        <tr>
+            <td>Case fan x6</td>
+            <td>be quiet! Pure Wings 2 120mm</td>
+            <td><a
+                    href="https://www.arukereso.hu/szamitogep-huto-c3094/be-quiet/pure-wings-2-120mm-bl046-p184831309/"><img
+                        src="https://p1.akcdn.net/full/211719809.be-quiet-pure-wings-2-120mm-bl046.jpg"
+                        width="200px" alt=""></a></td>
+            <td>21000 Ft</td>
         </tr>
         <tr>
             <td>Case</td>
-            <td>Razer Tomahawk ATX RGB</td>
+            <td>Lian Li PC-011d Razer edition</td>
             <td><a
-                    href="https://www.arukereso.hu/szamitogep-haz-c3085/razer/tomahawk-atx-rgb-rc21-01420100-r3m1-p620952321/"><img
-                        src="https://p1.akcdn.net/full/776314092.razer-tomahawk-atx-rgb-rc21-01420100-r3m1.jpg"
+                    href="https://www.arukereso.hu/szamitogep-haz-c3085/lian-li/pc-o11d-razer-edition-pc-o11dre-p494786898/"><img
+                        src="https://merlinhardver.hu/img/products/20190304195921-thumbnail_lian_li-pc-o11_dynamic_razer_edition_angled.jpg"
                         width="200px" alt=""></a></td>
-            <td>81000 Ft</td>
+            <td>50000 Ft</td>
         </tr>
 
 
